--- a/JBNA/JBNA.csproj
+++ b/JBNA/JBNA.csproj
@@ -8,4 +8,8 @@
 	<LangVersion>10</LangVersion>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="JBSnorro" Version="0.0.13" />
+  </ItemGroup>
+
 </Project>
